<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="20dp">
    <TextView
        android:id="@+id/register_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_title"
        android:textSize="30sp"/>
    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/name_hint"/>
    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"/>
    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:hint="@string/password_hint"/>
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_label"
            android:textSize="20sp"/>
        <RadioButton
            android:id="@+id/male_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male_radio"
            android:layout_marginStart="30dp"/>
        <RadioButton
            android:id="@+id/female_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female_radio"
            android:layout_marginStart="30dp"/>
    </RadioGroup>
    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:text="@string/submit"/>
    <TextView
        android:id="@+id/error_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"/>
    <TextView
        android:id="@+id/error_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"/>
    <TextView
        android:id="@+id/error_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"/>
    <TextView
        android:id="@+id/error_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"/>

</LinearLayout>
